--- a/src/sass/_color.scss
+++ b/src/sass/_color.scss
@@ -1,9 +1,9 @@
 :root{
-    --login-container-bg: #DCF3FE;
-    --login-container-right-bg: #907FF4;
-    --login-btn-bg: #5138ED;
+    --login-container-bg: #FCEEE2;
+    --login-container-right-bg: #FE9850;
+    --login-btn-bg: #fd8835;
     --login-form-input-border: #c7c1e5;  
     
-    --admin-panel-bg: #F4F7FE;
+    --admin-panel-bg: #FDF8F3;
     --nav-element-active-border: #5138ED;
 }
