--- a/src/sass/_loginPage.scss
+++ b/src/sass/_loginPage.scss
@@ -39,7 +39,7 @@
         width: 100px;
         height: 100px;
         border-radius: 50px;
-        border: 3px solid #b5a9ff;
+        border: 3px solid #FCEEE2;
         overflow: hidden;
         margin-bottom: 25px !important;
       }
@@ -72,7 +72,7 @@
           outline: none;
 
           :focus {
-            border: 2px solid #5138ed;
+            border: 2px solid #FE9850;
           }
         }
       }
@@ -113,7 +113,6 @@
         border: 2px solid var(--login-btn-bg);
       }
     }
-
     // Visible only on desktop min-width : 1000px
     .left {
       width: 50%;
@@ -124,11 +123,7 @@
       align-items: center;
       background-image: linear-gradient(
         to right top,
-        #907ff4,
-        #826ef3,
-        #735df1,
-        #634bef,
-        #5138ed
+        #f8c29c, #fbb685, #fdaa6f, #fe9d59, #ff9042
       );
 
       // Glassmorphism effect
@@ -136,7 +131,7 @@
         width: 60%;
         height: 70%;
         background: rgba(255, 255, 255, 0.25);
-        box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+        box-shadow: 0 8px 32px 0 rgba(230, 138, 53, 0.37);
         backdrop-filter: blur(4px);
         -webkit-backdrop-filter: blur(4px);
         border-radius: 20px;
@@ -152,7 +147,7 @@
           height: 150px;
           border-radius: 75px;
           overflow: hidden;
-          border: 3px solid #b5a9ff;
+          border: 3px solid #f89c51;
         }
 
         p {
